// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Img component should render correctly with isBordered prop 1`] = `
.c0 {
  height: 100%;
  border: none;
}

.c1 {
  max-width: 100%;
  max-height: 100%;
  border-radius: 10000px;
  border: 3px solid #FDFDFD;
}

<span
  class="c0"
>
  <img
    alt="avatar placeholder"
    class="c1"
    loading="lazy"
    referrerpolicy="no-referrer"
    src="https://i.pravatar.cc/150?id=50"
  />
</span>
`;

exports[`Img component should render correctly without isBordered prop 1`] = `
.c0 {
  height: 100%;
  border: none;
}

.c1 {
  max-width: 100%;
  max-height: 100%;
  border-radius: 10000px;
  border: none;
}

<span
  class="c0"
>
  <img
    alt="avatar placeholder"
    class="c1"
    loading="lazy"
    referrerpolicy="no-referrer"
    src="https://i.pravatar.cc/150?id=50"
  />
</span>
`;
